# ewald

./: README.md  ewald.py  setup.cfg  system_size_effects.html  system_size_effects.ipynb  ytp_2020_drvh_implicit.csv
notebooks/: system_size_effects.ipynb
notebooks/data/: yp_2018_mdc.csv
