[metadata]
name = ewald
version = 0.1.0
description = Ewald sums
license = MIT
license_files = LICENSE
url = https://github.com/jpthompson17/ewald
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
author= Jeff Thompson
author_email = jpthompson17@gmail.com

[options]
py_modules = ewald
